  * Fortran (PR#1442)
  * HTTP (PR#1432)
  * Inform 6 (PR#1461)
  * Lean (PR#1415)
  * Matlab (PR#1399)
  * NASM (PR#1465)
  * Nim (PR#1426)
  * SQL (PR#1402)
  * SystemVerilog (PR#1436, PR#1452, PR#1454, PR#1460, PR#1462, PR#1463, PR#1464)
  * TeraTerm (PR#1337)

- Added a new filter for math symbols (PR#1406)
- The Kconfig lexer will match Kconfig derivative names now (PR#1458)

Version 2.6.1
-------------
(released March 8, 2020)

- This release fixes a packaging issue. No functional changes.

Version 2.6
-----------
(released March 8, 2020)

- Running Pygments on Python 2.x is no longer supported.
  (The Python 2 lexer still exists.)

- Added lexers:

  * Linux kernel logs (PR#1310)
  * LLVM MIR (PR#1361)
  * MiniScript (PR#1397)
  * Mosel (PR#1287, PR#1326)
  * Parsing Expression Grammar (PR#1336)
  * ReasonML (PR#1386)
  * Ride (PR#1319, PR#1321)
  * Sieve (PR#1257)
  * USD (PR#1290)
  * WebIDL (PR#1309)

- Updated lexers:

  * Apache2 (PR#1378)
  * Chapel (PR#1357)
  * CSound (PR#1383)
  * D (PR#1375, PR#1362)
  * Idris (PR#1360)
  * Perl6/Raku lexer (PR#1344)
  * Python3 (PR#1382, PR#1385)
  * Rust: Updated lexer to cover more builtins (mostly macros) and miscellaneous
  new syntax (PR#1320)
  * SQL: Add temporal support keywords (PR#1402)

- The 256-color/true-color terminal formatters now support the italic attribute
  in styles (PR#1288)
- Support HTTP 2/3 header (PR#1308)
- Support missing reason in HTTP header (PR#1322)
- Boogie/Silver: support line continuations and triggers, move contract keywords
  to separate category (PR#1299)
- GAS: support C-style comments (PR#1291)
- Fix names in S lexer (PR#1330, PR#1333)
- Fix numeric literals in Ada (PR#1334)
- Recognize ``.mjs`` files as Javascript (PR#1392)
- Recognize ``.eex`` files as Elixir (PR#1387)
- Fix ``re.MULTILINE`` usage (PR#1388)
- Recognize ``pipenv`` and ``poetry`` dependency & lock files (PR#1376)
- Improve font search on Windows (#1247)
- Remove unused script block (#1401)

Version 2.5.2