@@ -231,5 +231,6 @@ Other contributors, listed alphabetically, are:
 * Rob Zimmerman -- Kal lexer
 * Vincent Zurczak -- Roboconf lexer
 * Hubert Gruniaux -- C and C++ lexer improvements
+* Ram Rachum -- Bugfixes
 
 Many thanks for all contributions!
