@@ -45,7 +45,7 @@ def lex(code, lexer):
             ('unbound method get_tokens' in err.args[0] or
              'missing 1 required positional argument' in err.args[0])):
             raise TypeError('lex() argument must be a lexer instance, '
-                            'not a class')
+                            'not a class') from err
         raise
 
 
@@ -69,7 +69,7 @@ def format(tokens, formatter, outfile=None):  # pylint: disable=redefined-builti
             ('unbound method format' in err.args[0] or
              'missing 1 required positional argument' in err.args[0])):
             raise TypeError('format() argument must be a formatter instance, '
-                            'not a class')
+                            'not a class') from err
         raise
 
 
