@@ -777,8 +777,10 @@ class RaiseOnErrorTokenFilter(Filter):
             # issubclass() will raise TypeError if first argument is not a class
             if not issubclass(self.exception, Exception):
                 raise TypeError
-        except TypeError:
-            raise OptionError('excclass option is not an exception class')
+        except TypeError as e:
+            raise OptionError(
+                'excclass option is not an exception class'
+            ) from e
 
     def filter(self, lexer, stream):
         for ttype, value in stream:
