@@ -69,13 +69,17 @@ def get_style_by_name(name):
 
     try:
         mod = __import__('pygments.styles.' + mod, None, None, [cls])
-    except ImportError:
-        raise ClassNotFound("Could not find style module %r" % mod +
-                         (builtin and ", though it should be builtin") + ".")
+    except ImportError as e:
+        raise ClassNotFound(
+            "Could not find style module %r" % mod +
+            (builtin and ", though it should be builtin") + "."
+        ) from e
     try:
         return getattr(mod, cls)
-    except AttributeError:
-        raise ClassNotFound("Could not find style class %r in style module." % cls)
+    except AttributeError as e:
+        raise ClassNotFound(
+            "Could not find style class %r in style module." % cls
+        ) from e
 
 
 def get_all_styles():
