@@ -72,14 +72,14 @@ def get_int_opt(options, optname, default=None):
     string = options.get(optname, default)
     try:
         return int(string)
-    except TypeError:
+    except TypeError as e:
         raise OptionError('Invalid type %r for option %s; you '
                           'must give an integer value' % (
-                              string, optname))
-    except ValueError:
+                              string, optname)) from e
+    except ValueError as e:
         raise OptionError('Invalid value %r for option %s; you '
                           'must give an integer value' % (
-                              string, optname))
+                              string, optname)) from e
 
 
 def get_list_opt(options, optname, default=None):
