@@ -40,6 +40,7 @@ Version 2.7.0
 
 - Added a new filter for math symbols (PR#1406)
 - The Kconfig lexer will match Kconfig derivative names now (PR#1458)
+- Fixed exception-chaining error messages (PR#1482)
 
 Version 2.6.1
 -------------
